[package]
name = "balancer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Cavey Cool <caveycool@gmail.com>"]
description = "Use rayon and mpi to achieve simple forms of internode + intranode parallelism."
repository = "https://github.com/cavemanloverboy/balancer"

[dependencies]
mpi = "0.6.0"
rayon = "1.7.0"
